Adicionar o componente Header e os estilos iniciais.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Meta Quest Pro reúne o que há de mais moderno em VR para mudar as perspectivas sobre como projetamos para mundos físicos e virtuais" />
